--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
     "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1",
-    "react-router-prop-types": "^1.0.4"
+    "pretty-quick": "^2.0.1"
   }
 }
