--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@storybook/addon-actions": "^5.3.8",
     "@storybook/addon-info": "^5.3.8",
     "@storybook/addon-links": "^5.3.8",
+    "@storybook/addon-storyshots": "^5.3.9",
     "@storybook/addons": "^5.3.8",
     "@storybook/preset-create-react-app": "^1.5.2",
     "@storybook/react": "^5.3.8",
@@ -65,6 +66,13 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
     "prettier": "^1.19.1",
-    "pretty-quick": "^2.0.1"
+    "pretty-quick": "^2.0.1",
+    "react-test-renderer": "^16.12.0",
+    "require-context.macro": "^1.2.2"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-syntax-highlighter|@storybook|react-toastify)"
+    ]
   }
 }
