--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,8 @@
     "import/prefer-default-export": 0,
     "semi": "error",
     "react/jsx-props-no-spreading": ["off"],
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }]
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "import/no-cycle": ["off"]
   },
   "globals": {
     "window": true,
