--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.0.2",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "firebase": "^7.7.0",
+    "history": "^4.10.1",
     "material-ui": "^0.20.2",
     "material-ui-search-bar": "^0.4.2",
     "prop-types": "^15.7.2",
